<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/start" />
        <item
            android:id="@+id/nav_create_course"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/create_course" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/store" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/spread_the_word">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_share"
                android:title="nav_contact_us" />
        </menu>
    </item>

</menu>
